--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.sbaltsas.assignments</groupId>
-    <artifactId>NetworksIIChat</artifactId>
+    <groupId>CN2_AUTH_ChatAndVoIP_Group_A</groupId>
+    <artifactId>CN2_AUTH_ChatAndVoIP_Group_A</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>NetworksIIChat</name>
 
